# e-tax

./: .dockerignore  .gitignore  Dockerfile  README.md  REDME.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py  errors.py  generator.py  initialization_adapter.py  mapper.py  models.py  storage.py  validator.py
app/resources/: __init__.py  koa020_layout.json
docs/: field-mapping.md  research.md
examples/: initialization-minimal.json  request.json
schemas/: README.md
schemas/general/: prototype-general.xsd
schemas/shotoku/: RKO0010-250-koa020-prototype.xsd
scripts/: smoke_test.py  validate_official.py
tests/: conftest.py  test_api.py  test_generator.py  test_initialization_adapter.py  test_validator.py
